# colorfulme-project

./: .env.example  .gitignore  BIDIRECTIONAL_WEBHOOK_GUIDE.md  GITHUB_SETUP.md  README.md  STRIPE_WEBHOOK_SETUP.md  WEBHOOK_INTEGRATION_GUIDE.md  app.py  capture_screenshot.py  capture_templates.py  config.py  extensions.py  gunicorn_config.py  models.py  package.json  programmatic_content.py  pyproject.toml  quick_start.py  requirements.txt  robots.txt  run.sh  run_dev.sh  start_server.py  sync_stripe_subscriptions.py  tailwind.config.js  templates_data.py
attached_assets/: Pasted--Use-efficient-cache-lifetimes-Est-savings-of-136-KiB-A-long-cache-lifetime-can-speed-up-repeat-visi-1763692999903_1763692999923.txt  Pasted--div-class-grid-grid-cols-1-lg-grid-cols-2-gap-6-Left-Panel-Sections--1763863574383_1763863574402.txt  Pasted--name-Best-Buy-Receipt-description-Professional-Best-Buy-electronics-store-receipt-te-1763088404572_1763088404575.txt  Pasted--script-function-t-e-var-o-n-p-r-e-SV-window-posthog-window-posthog-loaded-window-1760520425592_1760520425593.txt  Pasted-1-Homepage-CTA-completely-broken-What-s-happening-Users-click-Start-Creating-Generate-Receipt-1763987502705_1763987502705.txt  Pasted-1-Homepage-CTA-completely-broken-What-s-happening-Users-click-Start-Creating-Generate-Receipt-1763987746387_1763987746388.txt  Pasted-Does-the-Brief-Match-the-Page-No-the-page-does-not-full_1765469049262.txt  Pasted-Headers-1-Receipt-maker-features-Original-Content-h2-Po_1765468767520.txt  Pasted-How-the-receipt-generator-works-Create-professional-rec_1768816786599.txt  (+18 more)
(+150 files in other folders)
