[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "flask-sqlalchemy>=3.1.1",
    "stripe>=13.0.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
    "python-dateutil>=2.9.0.post0",
    "playwright>=1.56.0",
    "pillow>=12.0.0",
    "cryptography>=46.0.3",
    "bleach>=6.3.0",
    "reportlab>=4.4.5",
    "pypdf2>=3.0.1",
    "openpyxl>=3.1.5",
]
